fix overflow

--- a/client/public/global.css
+++ b/client/public/global.css
@@ -4,8 +4,10 @@ html, body {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	overflow: hidden;
 }
 
 body {
 	font-family: 'Roboto', sans-serif;
+	overflow: hidden;
 }
